# obsidian-agent-bridge

./: .gitignore  .npmignore  AGENTS.md  LICENSE  README.ko.md  README.md  checker.py  obs_agent.py  package.json  pyproject.toml  recorder.py  router.py  vault.py
.claude-plugin/: plugin.json
.github/workflows/: test.yml
agents/: vault-curator.md
cli/: __init__.py  auto_record.py  checker.py  config.py  i18n.py  oab.py  obs_agent.py  reader.py  recorder.py  router.py
examples/: AGENTS.md  claude_desktop_config.json  codex_config.toml  config.json
mcp_server/: __init__.py  server.py
obsidian_agent_bridge/: __init__.py  checker.py  cli.py  recorder.py  router.py  vault.py
scripts/: codex-notify.ps1  install-claude.ps1  install-codex.ps1  run-mcp.ps1  write-config.ps1
skills/obsidian-memory/: SKILL.md
tests/: test_core.py
