[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-agent-bridge"
version = "0.1.0"
description = "Local-first Obsidian memory tools for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pinkpanther7929" }]
keywords = ["obsidian", "agent", "codex", "claude", "memory", "mcp"]
dependencies = []

[project.scripts]
obs-agent = "obs_agent:main"

[tool.hatch.build.targets.wheel]
py-modules = ["obs_agent", "checker", "recorder", "router", "vault"]
